# rust-amqp-http-gateway

./: .gitignore  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  LICENSE.md  build.rs  docker-compose.yml  readme.md
.github/workflows/: docker-image.yml  rust.yml
doc/: components.puml  quick-start.md  services.md
src/: lib.rs
utils/wrk/: Dockerfile
utils/wrk/scripts/: post-json.lua
