[package]
name = "amqp-service"
version = "0.1.0"
edition = "2021"

[dependencies]

# async / await
tokio = { version = "1.17.0", features = ["full"] }
futures = "0.3.21"
tracing-subscriber = "0.3.11"

# Rest
actix-web = "4"
futures-lite = "1.12.0"

# AMQP
lapin = "2.1.1"
bb8 = "0.8.0"
bb8-lapin = "0.4.0"

# Serializing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
log = "0.4.16"

# HTTP Client
reqwest = "0.11.10"

# Utils
num_cpus = "1.13.1"

[profile.release]
panic = 'abort'